Added custom kNN classifier

--- a/k_nn_predictor.ipynb
+++ b/k_nn_predictor.ipynb
@@ -14,6 +14,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NearestNeighbours(object):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def train(self, X, Y):\n",
+    "        self.Xtr = X\n",
+    "        self.Ytr = Y\n",
+    "        \n",
+    "    def predict(self, X):\n",
+    "        num_test = X.shape[0]\n",
+    "        Ypred = np.zeros(num_test, dtype=self.Ytr.dtype)\n",
+    "        \n",
+    "        for i in range(num_test):\n",
+    "            \n",
+    "            distances = np.sqrt(np.sum(np.abs(self.Xtr - X[i, :]), axis=1))\n",
+    "            minimum = np.argmin(distances)\n",
+    "            Ypred[i] = self.Ytr[minimum]\n",
+    "        return Ypred"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -153,27 +180,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acheived accuracy of 72.72727272727273 %\n"
+      "Acheived accuracy of 66.88311688311688 % for 1 neighbour(s)\n",
+      "Acheived accuracy of 66.88311688311688 % for 2 neighbour(s)\n",
+      "Acheived accuracy of 66.88311688311688 % for 3 neighbour(s)\n",
+      "Acheived accuracy of 66.88311688311688 % for 5 neighbour(s)\n",
+      "Acheived accuracy of 66.88311688311688 % for 10 neighbour(s)\n",
+      "Acheived accuracy of 66.88311688311688 % for 20 neighbour(s)\n",
+      "Acheived accuracy of 66.88311688311688 % for 50 neighbour(s)\n",
+      "Acheived accuracy of 66.88311688311688 % for 100 neighbour(s)\n"
      ]
     }
    ],
    "source": [
-    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "for k in [1, 2, 3, 5, 10, 20, 50, 100]:\n",
+    "#     knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "#     knn.fit(Xtr, Ytr)\n",
     "\n",
-    "knn.fit(Xtr, Ytr)\n",
+    "    knn = NearestNeighbours()\n",
+    "    knn.train(Xtr, Ytr)\n",
+    "    \n",
+    "    pred = knn.predict(Xte)\n",
     "\n",
-    "pred = knn.predict(Xte)\n",
+    "    accuracy = np.mean(pred == Yte, axis=0) * 100\n",
     "\n",
-    "accuracy = np.mean(pred == Yte, axis=0) * 100\n",
-    "\n",
-    "print('Acheived accuracy of {0} %'.format(accuracy))"
+    "    print('Acheived accuracy of {0} % for {1} neighbour(s)'.format(accuracy, k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.34527687296416937"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(Ytr)/len(Ytr)"
    ]
   },
   {
